--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.18.2",
     "playwright": "^1.31.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
